Add main screen with filtering of pets

--- a/app/src/main/res/drawable/button_bg2.xml
+++ b/app/src/main/res/drawable/button_bg2.xml
@@ -1,6 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <stroke android:color="#782620" android:width="2dp"/>
-    <corners android:radius="5dp"/>
-    <size android:width="30dp" android:height="10dp"/>
-</shape>
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <!-- Натискання на кнопку -->
+    <item android:state_pressed="true">
+
+        <shape>
+            <solid android:color="#422828" /> <!-- Змініть колір за потреби -->
+            <corners android:radius="5dp" />
+            <size android:width="30dp" android:height="10dp" />
+        </shape>
+    </item>
+
+    <!-- Стандартний стан кнопки -->
+    <item>
+        <shape>
+            <stroke android:color="#782620" android:width="2dp" />
+            <corners android:radius="5dp" />
+            <size android:width="30dp" android:height="10dp" />
+        </shape>
+    </item>
+
+</selector>
