--- a/app/src/main/res/layout/sign_up_layout.xml
+++ b/app/src/main/res/layout/sign_up_layout.xml
@@ -54,6 +54,7 @@
         android:layout_height="40dp"
         android:layout_marginTop="2dp"
         android:ems="10"
+        android:text="oleh"
         android:inputType="textPersonName"
         android:textSize="16sp"
         android:elevation="2dp"
@@ -87,6 +88,7 @@
         android:layout_height="40dp"
         android:layout_marginTop="2dp"
         android:ems="10"
+        android:text="kvasnytsia"
         android:inputType="textPersonName"
         android:textSize="16sp"
         android:elevation="2dp"
@@ -121,6 +123,7 @@
         android:ems="10"
         android:inputType="textEmailAddress"
         android:textSize="16sp"
+        android:text="olegkvasnitsia13@gmail.com"
         android:elevation="2dp"
         android:drawableStart="@drawable/envelope_simple"
         android:drawablePadding="15dp"
@@ -178,6 +181,7 @@
                 android:paddingVertical="5dp"
                 android:inputType="textPassword"
                 android:textSize="16sp"
+                android:text="BEVh'f&amp;MM79'y}B"
                 android:drawableStart="@drawable/lock"
                 android:drawablePadding="15dp"
                 android:includeFontPadding="false"
@@ -232,6 +236,7 @@
                 android:textSize="16sp"
                 android:drawableStart="@drawable/lock"
                 android:drawablePadding="15dp"
+                android:text="BEVh'f&amp;MM79'y}B"
                 android:includeFontPadding="false"
                 android:paddingStart="10dp"
                 android:hint="Repeat your password"
