--- a/app/src/main/res/drawable/card_bg.xml
+++ b/app/src/main/res/drawable/card_bg.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <stroke android:color="#782620" android:width="4dp"/>
-    <corners android:radius="10dp"/>
+    <corners android:radius="20dp"/>
+    <solid android:color="@color/white"/>
 </shape>
