--- a/app/src/main/res/layout/log_in_layout.xml
+++ b/app/src/main/res/layout/log_in_layout.xml
@@ -54,7 +54,7 @@
 
 
     <EditText
-        android:id="@+id/editTextText"
+        android:id="@+id/edEmail"
         android:layout_width="0dp"
         android:background="@drawable/rounded_edit_text"
         android:layout_height="40dp"
@@ -62,6 +62,7 @@
         android:ems="10"
         android:inputType="textEmailAddress"
         android:textSize="16sp"
+        android:text="olegkvasnitsia13@gmail.com"
         android:elevation="2dp"
         android:drawableStart="@drawable/envelope_simple"
         android:drawablePadding="15dp"
@@ -82,8 +83,8 @@
         android:fontFamily="@font/poppins"
         android:textSize="17sp"
         android:text="Password"
-        app:layout_constraintStart_toStartOf="@+id/editTextText"
-        app:layout_constraintTop_toBottomOf="@+id/editTextText" />
+        app:layout_constraintStart_toStartOf="@+id/edEmail"
+        app:layout_constraintTop_toBottomOf="@+id/edEmail" />
 
 
     <androidx.cardview.widget.CardView
@@ -93,7 +94,7 @@
         android:layout_marginTop="10dp"
         app:cardCornerRadius="8dp"
         app:cardElevation="2dp"
-        app:layout_constraintEnd_toEndOf="@+id/editTextText"
+        app:layout_constraintEnd_toEndOf="@+id/edEmail"
         app:layout_constraintStart_toStartOf="@+id/textView3"
         app:layout_constraintTop_toBottomOf="@+id/textView3">
 
@@ -112,13 +113,14 @@
             >
 
             <EditText
-                android:id="@+id/password_editText"
+                android:id="@+id/edPassword"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:ems="10"
                 android:paddingVertical="5dp"
                 android:inputType="textPassword"
                 android:textSize="16sp"
+                android:text="BEVh'f&amp;MM79'y}B"
                 android:drawableStart="@drawable/lock"
                 android:drawablePadding="15dp"
                 android:includeFontPadding="false"
@@ -143,7 +145,7 @@
         app:layout_constraintTop_toBottomOf="@+id/cardView" />
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/button"
+        android:id="@+id/btLogIn"
         android:layout_width="0dp"
         android:layout_height="42dp"
         android:layout_marginTop="30dp"
