--- a/app/src/main/res/layout/pet_layout.xml
+++ b/app/src/main/res/layout/pet_layout.xml
@@ -2,27 +2,29 @@
 <com.google.android.material.card.MaterialCardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
+    android:layout_width="170dp"
     android:layout_height="wrap_content"
     android:background="@drawable/card_bg"
     android:layout_margin="10dp"
+    app:cardBackgroundColor="@color/white"
     app:cardElevation="50dp"
     app:strokeColor="#782620"
     app:strokeWidth="1dp">
     <LinearLayout
 
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
         <androidx.cardview.widget.CardView
-            android:layout_width="wrap_content"
-            android:padding="40dp"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:layout_margin="5dp"
             app:cardCornerRadius="20dp">
             <ImageView
                 android:id="@+id/imageView"
-                android:layout_width="200dp"
-                android:layout_height="200dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="centerCrop"
                 app:srcCompat="@drawable/dogphoto" />
         </androidx.cardview.widget.CardView>
         <TextView
