--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -3,5 +3,7 @@
     <array name="preloaded_fonts" translatable="false">
         <item>@font/poppins</item>
         <item>@font/poppins_bold</item>
+        <item>@font/roboto_slab</item>
+        <item>@font/roboto_slab_bold</item>
     </array>
 </resources>
