--- a/app/src/main/res/layout/pet_layout.xml
+++ b/app/src/main/res/layout/pet_layout.xml
@@ -2,13 +2,15 @@
 <com.google.android.material.card.MaterialCardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="170dp"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/card_bg"
-    android:layout_margin="10dp"
+    android:layout_marginTop="10dp"
+    android:layout_marginHorizontal="5dp"
     app:cardBackgroundColor="@color/white"
     app:cardElevation="50dp"
     app:strokeColor="#782620"
+    android:layout_rowSpan="1"
     app:strokeWidth="1dp">
     <LinearLayout
 
