--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,188 +1,219 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<androidx.core.widget.NestedScrollView
+
+<androidx.drawerlayout.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 
-        <ImageView
-            android:id="@+id/imPets"
-            android:layout_width="0dp"
-            android:layout_height="380dp"
-            android:scaleType="centerCrop"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/petsimg" />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-        <ImageView
-            android:id="@+id/imLogo"
-            android:layout_width="135dp"
-            android:layout_height="56dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="26dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/logo" />
+            <ImageView
+                android:id="@+id/imPets"
+                android:layout_width="0dp"
+                android:layout_height="380dp"
+                android:scaleType="centerCrop"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/petsimg" />
 
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/btSignUp"
-            android:layout_width="wrap_content"
-            android:layout_height="33dp"
-            android:layout_marginTop="30dp"
-            android:layout_marginEnd="25dp"
-            android:background="@drawable/button_bg2"
-            android:text="Sign Up"
-            android:textAllCaps="false"
-            android:textColor="@drawable/bt_text_color_selector"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            <ImageView
+                android:id="@+id/imLogo"
+                android:layout_width="135dp"
+                android:layout_height="56dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="45dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/logo" />
 
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/btLogIn"
-            android:layout_width="wrap_content"
-            android:layout_height="33dp"
-            android:layout_marginTop="10dp"
-            android:background="@drawable/button_bg2"
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btSignUp"
+                android:layout_width="wrap_content"
+                android:layout_height="33dp"
+                android:layout_marginTop="40dp"
+                android:layout_marginEnd="25dp"
+                android:background="@drawable/button_bg2"
+                android:text="Sign Up"
+                android:textAllCaps="false"
+                android:textColor="@drawable/bt_text_color_selector"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-            android:text="Log In"
-            android:textAllCaps="false"
-            android:textColor="@drawable/bt_text_color_selector"
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btLogIn"
+                android:layout_width="wrap_content"
+                android:layout_height="33dp"
+                android:layout_marginTop="10dp"
+                android:background="@drawable/button_bg2"
+                android:text="Log In"
+                android:textAllCaps="false"
+                android:textColor="@drawable/bt_text_color_selector"
+                app:layout_constraintEnd_toEndOf="@id/btSignUp"
+                app:layout_constraintTop_toBottomOf="@id/btSignUp" />
 
-            app:layout_constraintEnd_toEndOf="@id/btSignUp"
-            app:layout_constraintTop_toBottomOf="@id/btSignUp" />
+            <ImageView
+                android:id="@+id/btOpenDrawer"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginEnd="40dp"
+                android:visibility="gone"
+                android:src="@drawable/bt_nav_img"
+                android:background="@null"
+                android:scaleType="fitCenter"
+                app:layout_constraintBottom_toBottomOf="@+id/imLogo"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/imLogo" />
 
+            <androidx.cardview.widget.CardView
+                android:id="@+id/cardView"
+                android:layout_width="0dp"
+                android:layout_height="200dp"
+                android:layout_marginHorizontal="15dp"
+                android:layout_marginTop="-100dp"
+                app:cardCornerRadius="15dp"
+                app:cardElevation="50dp"
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/cardView"
-            android:layout_width="0dp"
-            android:layout_height="200dp"
-            android:layout_marginHorizontal="15dp"
-            android:layout_marginTop="-100dp"
-            app:cardCornerRadius="15dp"
-            app:cardElevation="50dp"
+                app:layout_constraintEnd_toEndOf="@id/imPets"
+                app:layout_constraintStart_toStartOf="@id/imPets"
+                app:layout_constraintTop_toBottomOf="@+id/imPets">
 
-            app:layout_constraintEnd_toEndOf="@id/imPets"
-            app:layout_constraintStart_toStartOf="@id/imPets"
-            app:layout_constraintTop_toBottomOf="@+id/imPets">
-
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
-
-                <TextView
-                    android:id="@+id/textView7"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="20dp"
-                    android:fontFamily="@font/poppins"
-                    android:text="Find your friend"
-                    android:textSize="20sp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:layout_marginTop="20dp"
-                    android:paddingHorizontal="10dp">
-                    <ImageView
-                        android:id="@+id/imDogFilter"
-                        android:layout_width="80dp"
-                        android:layout_height="80dp"
-                        android:background="@drawable/button_bg2"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/textView7"
-                        app:srcCompat="@drawable/dog" />
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
 
-                    <ImageView
-                        android:id="@+id/imCatFilter"
-                        android:layout_width="80dp"
-                        android:layout_height="80dp"
-                        android:layout_weight="1"
-                        app:layout_constraintBottom_toBottomOf="@+id/imDogFilter"
-                        app:layout_constraintStart_toEndOf="@id/imDogFilter"
-                        app:layout_constraintTop_toTopOf="@+id/imDogFilter"
-                        app:srcCompat="@drawable/cat" />
-
-                    <ImageView
-                        android:id="@+id/imRabbitFilter"
-                        android:layout_width="80dp"
-                        android:layout_height="80dp"
-                        android:layout_weight="1"
-                        app:layout_constraintBottom_toBottomOf="@+id/imCatFilter"
-                        app:layout_constraintEnd_toStartOf="@+id/imTurtleFilter"
-                        app:layout_constraintStart_toEndOf="@id/imCatFilter"
-                        app:layout_constraintTop_toTopOf="@+id/imCatFilter"
-                        app:srcCompat="@drawable/rabbit" />
-
-                    <ImageView
-                        android:id="@+id/imTurtleFilter"
-                        android:layout_width="80dp"
-                        android:layout_height="80dp"
-                        android:layout_weight="1"
-                        app:layout_constraintBottom_toBottomOf="@+id/imRabbitFilter"
+                    <TextView
+                        android:id="@+id/textView7"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="20dp"
+                        android:fontFamily="@font/poppins"
+                        android:text="Find your friend"
+                        android:textSize="20sp"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toTopOf="@+id/imRabbitFilter"
-                        app:srcCompat="@drawable/turtle" />
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="20dp"
+                        android:orientation="horizontal"
+                        android:paddingHorizontal="10dp">
+
+                        <ImageView
+                            android:id="@+id/imDogFilter"
+                            android:layout_width="80dp"
+                            android:layout_height="80dp"
+                            android:background="@drawable/button_bg2"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toBottomOf="@+id/textView7"
+                            app:srcCompat="@drawable/dog" />
+
+                        <ImageView
+                            android:id="@+id/imCatFilter"
+                            android:layout_width="80dp"
+                            android:layout_height="80dp"
+                            android:layout_weight="1"
+                            app:layout_constraintBottom_toBottomOf="@+id/imDogFilter"
+                            app:layout_constraintStart_toEndOf="@id/imDogFilter"
+                            app:layout_constraintTop_toTopOf="@+id/imDogFilter"
+                            app:srcCompat="@drawable/cat" />
+
+                        <ImageView
+                            android:id="@+id/imRabbitFilter"
+                            android:layout_width="80dp"
+                            android:layout_height="80dp"
+                            android:layout_weight="1"
+                            app:layout_constraintBottom_toBottomOf="@+id/imCatFilter"
+                            app:layout_constraintEnd_toStartOf="@+id/imTurtleFilter"
+                            app:layout_constraintStart_toEndOf="@id/imCatFilter"
+                            app:layout_constraintTop_toTopOf="@+id/imCatFilter"
+                            app:srcCompat="@drawable/rabbit" />
+
+                        <ImageView
+                            android:id="@+id/imTurtleFilter"
+                            android:layout_width="80dp"
+                            android:layout_height="80dp"
+                            android:layout_weight="1"
+                            app:layout_constraintBottom_toBottomOf="@+id/imRabbitFilter"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintTop_toTopOf="@+id/imRabbitFilter"
+                            app:srcCompat="@drawable/turtle" />
+                    </LinearLayout>
+
+
                 </LinearLayout>
 
+            </androidx.cardview.widget.CardView>
 
-            </LinearLayout>
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="30dp"
+                android:layout_marginTop="30dp"
+                android:fontFamily="@font/poppins"
+                android:gravity="center"
+                android:text="Our pets"
+                android:textSize="26sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/cardView" />
 
-        </androidx.cardview.widget.CardView>
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rcView"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:foregroundGravity="center_horizontal"
+                android:paddingHorizontal="5dp"
+                android:splitMotionEvents="false"
+                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView"
 
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="30dp"
-            android:layout_marginTop="30dp"
-            android:fontFamily="@font/poppins"
-            android:gravity="center"
-            android:text="Our pets"
-            android:textSize="26sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/cardView" />
+                app:spanCount="2"
+                tools:itemCount="30"
+                tools:listitem="@layout/pet_layout" />
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rcView"
-            android:paddingHorizontal="5dp"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:splitMotionEvents="false"
-            tools:itemCount="30"
-            android:foregroundGravity="center_horizontal"
-            tools:listitem="@layout/pet_layout"
-            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-            app:spanCount="2"
+            <include
+                layout="@layout/main_footer"
+                android:layout_width="0dp"
+                android:layout_height="500dp"
+                android:layout_marginTop="20dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/rcView" />
 
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.core.widget.NestedScrollView>
 
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/navView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="end">
         <include
-            layout="@layout/main_footer"
-            android:layout_marginTop="20dp"
-            android:layout_width="0dp"
-            android:layout_height="500dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/rcView" />
+            android:id="@+id/navMenu"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            layout="@layout/menu_layout"/>
+    </com.google.android.material.navigation.NavigationView>
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
-</androidx.core.widget.NestedScrollView>
+</androidx.drawerlayout.widget.DrawerLayout>
