--- a/app/src/main/res/layout/all_done_layout.xml
+++ b/app/src/main/res/layout/all_done_layout.xml
@@ -52,13 +52,13 @@
 
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/button"
+        android:id="@+id/btGoLogin"
         android:layout_width="0dp"
         android:layout_height="42dp"
         android:layout_marginTop="30dp"
         android:background="@drawable/button_bg"
         android:gravity="center"
-        android:text="Go back to Log In"
+        android:text="Go to Log In"
         android:textAllCaps="false"
         android:textColor="@color/white"
 
